--- a/.github/workflows/cmake-test.yml
+++ b/.github/workflows/cmake-test.yml
@@ -20,7 +20,7 @@ jobs:
 
     # Configure & build
     - name: Configure CMake
-      run: cmake -S week 2/project-calc -B build -DCMAKE_BUILD_TYPE=Debug -G Ninja
+      run: cmake -S "week 2/project-calc" -B build -DCMAKE_BUILD_TYPE=Debug -G Ninja
 
     - name: Build
       run: cmake --build build --config Debug --parallel
