--- a/.github/workflows/cmake-test.yml
+++ b/.github/workflows/cmake-test.yml
@@ -2,34 +2,31 @@ name: CMake + CTest
 
 on:
   push:
-    branches: [ main, week2/** ]
+    branches:
+      - main
+      - 'week2/**'
   pull_request:
-    branches: [ main, week2/** ]
+    branches:
+      - main
+      - 'week2/**'
 
 jobs:
   build:
-    runs-on: windows-latest            # or ubuntu-latest if you prefer GCC/Clang
+    runs-on: windows-latest
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    # ---- Install Ninja or MinGW ----
-    - name: Install Ninja
-      if: runner.os == 'Windows'
-      uses: seanmiddleditch/gha-setup-ninja@v3
+      - name: Install Ninja (Windows)
+        if: runner.os == 'Windows'
+        uses: seanmiddleditch/gha-setup-ninja@v3
 
-    - name: Install MinGW (GCC)
-      if: runner.os == 'Windows'
-      uses: egor-tensin/setup-mingw@v2
-      with:
-        platform: x64
+      - name: Configure CMake
+        run: cmake -S week2/project-calc -B build -DCMAKE_BUILD_TYPE=Debug -G Ninja
 
-    # ---- Configure & Build ----
-    - name: Configure CMake
-      run: cmake -S week2/project-calc -B build -DCMAKE_BUILD_TYPE=Debug <GENERATORS>
+      - name: Build
+        run: cmake --build build --config Debug --parallel
 
-    - name: Build
-      run: cmake --build build --config Debug --parallel
-
-    # ---- Test ----
-    - name: Run tests
-      run: ctest --test-dir build --output-on-failure
+      - name: Run tests
+        run: ctest --test-dir build --output-on-failure
