--- a/.github/workflows/cmake-test.yml
+++ b/.github/workflows/cmake-test.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - 'week2/**'
+      - 'Week 2/**'
   pull_request:
     branches:
       - main
       - 'week2/**'
+      - 'Week 2/**'
 
 jobs:
   build:
@@ -23,7 +25,7 @@ jobs:
         uses: seanmiddleditch/gha-setup-ninja@v3
 
       - name: Configure CMake
-        run: cmake -S "week 2/project-calc" -B build -DCMAKE_BUILD_TYPE=Debug -G Ninja
+        run: cmake -S "Week 2/project-calc" -B build -DCMAKE_BUILD_TYPE=Debug -G Ninja
 
       - name: Build
         run: cmake --build build --config Debug --parallel
